<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/myLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/myTextView1"
        style="@style/myTxt"
        android:text="@string/hello" />

    <RadioGroup
        android:id="@+id/myRadioGroup1"
        style="@style/myRadio"
        android:layout_alignLeft="@+id/myTextView1"
        android:layout_below="@+id/myTextView1"
        android:orientation="vertical" >

        <TextView
            style="@style/myTxt"
            android:text="@string/str_radio_question1" />

        <RadioButton
            android:id="@+id/myOption1"
            style="@style/myRadio"
            android:text="@string/str_radio_op1" />

        <RadioButton
            android:id="@+id/myOption2"
            style="@style/myRadio"
            android:text="@string/str_radio_op2" />

        <RadioButton
            android:id="@+id/myOption3"
            style="@style/myRadio"
            android:text="@string/str_radio_op3" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myRadioGroup1"
        android:layout_below="@+id/myRadioGroup1" >

        <!-- 回答 -->

        <Button
            android:id="@+id/myButton1"
            style="@style/myBtn"
            android:text="@string/str_button1" />

        <!-- 清空 -->

        <Button
            android:id="@+id/myButton2"
            style="@style/myBtn"
            android:text="@string/str_button2" />
    </LinearLayout>

</RelativeLayout>